Fix: clarify API endpoint description for Page Assist in HPC-GPT tutorial

--- a/_posts/2025-12-09-hpc-gpt.md
+++ b/_posts/2025-12-09-hpc-gpt.md
@@ -139,7 +139,7 @@ There are several open-source web-based chat interfaces that you can use to inte
 
 ![](/assets/images/hpc-gpt-page-assist.png)
 
-One such interface is [Page Assist](https://chromewebstore.google.com/detail/page-assist-a-web-ui-for/jfgfiigpkhlkbnfnbobbkinehhfdhndo), a Chrome extension that provides a web UI for interacting with LLMs. Once you have set up port forwarding as described above, you can configure it to connect to your local LLM server by setting the API endpoint to `http://127.0.0.1:11434`.
+One such interface is [Page Assist](https://chromewebstore.google.com/detail/page-assist-a-web-ui-for/jfgfiigpkhlkbnfnbobbkinehhfdhndo), a Chrome extension that provides a web UI for interacting with LLMs. Once you have set up port forwarding as described above, you can configure it to connect to the HPC LLM server by setting the API endpoint to `http://127.0.0.1:11434`.
 
 ## Conclusion
 
