Fix: add instructions for automating job start and port forwarding with passwordless SSH in HPC-GPT tutorial

--- a/_posts/2025-12-09-hpc-gpt.md
+++ b/_posts/2025-12-09-hpc-gpt.md
@@ -133,6 +133,9 @@ ssh -N -J ${HPC_USERNAME}@${HOSTNAME} \
 
 You can now navigate to [http://127.0.0.1:11434](http://127.0.0.1:11434) in your web browser to confirm the LLM server is running.
 
+If you have [passwordless ssh set up](https://dashboard.hpc.unimelb.edu.au/ssh/#passwordless-ssh) you can create a script to automate starting the job and setting up port forwarding all from you local machine. An example script (`start-llm-on-hpc`) is provided in [this gist](https://gist.github.com/Wytamma/d68c9e85b2832e72d03f447eca57f795).
+{: .notice--info}
+
 ## Adding a Chat GUI
 
 There are several open-source web-based chat interfaces that you can use to interact with your LLM server.
